welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: '<-' expected but ')' found.
  for (j<_1 to 6){
                ^Program:12: error: illegal start of simple expression
}
^